--- a/index1.html
+++ b/index1.html
@@ -231,16 +231,16 @@
             <h2>Galerie 3D</h2>
             <div class="photo-container">
                 <div class="photo">
-                    <img src="photo1.jpg" alt="Photo 1"> <!-- First image -->
-                    <img src="photo2.jpg" alt="Photo 2"> <!-- Second image -->
+                    <img src="./assets/camionPropre1.png" alt="./assets/camionPropre1.png"> <!-- First image -->
+                    <img src="./assets/camionSale1.png" alt="Photo 2"> <!-- Second image -->
                 </div>
                 <div class="photo">
-                    <img src="photo3.jpg" alt="Photo 3"> <!-- Third image -->
-                    <img src="photo4.jpg" alt="Photo 4"> <!-- Fourth image -->
+                    <img src="./assets/camionPropre2.png" alt="./assets/camionPropre2.png"> <!-- Third image -->
+                    <img src="./assets/camionSale2.png" alt="Photo 4"> <!-- Fourth image -->
                 </div>
                 <div class="photo">
-                    <img src="photo5.jpg" alt="Photo 5"> <!-- Fifth image -->
-                    <img src="photo6.jpg" alt="Photo 6"> <!-- Sixth image -->
+                    <img src="./assets/camionPropre3.png" alt="./assets/camionPropre3.png"> <!-- Fifth image -->
+                    <img src="./assets/camionSale3.png" alt="Photo 6"> <!-- Sixth image -->
                 </div>
             </div>
         </div>
